--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "casual": "^1.6.2",
-    "nodemon": "^2.0.7"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
+    "casual": "^1.6.2",
+    "nodemon": "^2.0.7"
   }
 }
