--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "author": "Manish Kumar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
     "casual": "^1.6.2",
