--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^5.11.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "casual": "^1.6.2",
