--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run index.js"
+    "dev": "env-cmd nodemon index.js",
+    "repl": "env-cmd node"
   },
   "keywords": [
     "travel",
