--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-cron": "^3.0.0",
-    "xml-js": "^1.6.11",
-    "casual": "^1.6.2"
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
