--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env-cmd nodemon index.js",
-    "repl": "env-cmd node"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "travel",
@@ -16,18 +15,19 @@
   "author": "Manish Kumar",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "axios": "^0.21.4",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.12",
+    "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "node-cron": "^3.0.0",
+    "multer": "^1.4.4",
+    "node-cron": "^3.0.2",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "casual": "^1.6.2",
+    "nodemon": "^2.0.22"
   }
 }
